[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
pinocchio = "0.9.0"
pinocchio-log = "0.5.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"
arrayvec = "0.7"


[lib]
crate-type = ["cdylib", "lib"]
