[package]
name = "wrapper-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
borsh = "1.5.7"
solana-client = "2.3.7"
solana-sdk = "2.3.1"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
tokio = "1.47.1"

client = {path = "../client"}
mollusk-svm = "0.4.2"
mollusk-svm-programs-token = "0.4.2"
